# digital_doctors_helper

./: .gitignore
backend/: README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/docker/: Dockerfile  Dockerfile.prod  entrypoint.sh  start-celerybeat.sh  start-celeryworker.sh  start-flower.sh
backend/envs/: .env.dev  .env.prod  .env.prod.db  .env.prod.example
backend/nginx/: nginx.conf
backend/src/: make_env_file.py  manage.py  medical.xlsx
backend/src/common/: mixins.py  models.py  urls.py
backend/src/ddh/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/src/medical_entities/: admin.py  api.py  apps.py  models.py  routers.py  serializers.py  urls.py
backend/src/medical_entities/fixtures/: diagnoses.json  ma.json
backend/src/medical_entities/management/commands/: load_medical_entities.py
backend/src/medical_entities/migrations/: 0001_initial.py  0002_alter_diagnosis_name.py  0003_alter_doctor_options_alter_patient_options_and_more.py  0004_alter_medicalappointments_diagnoses.py
backend/src/reports/: admin.py  analysis.py  api.py  file_data_parser.py  full_report.py  models.py  routers.py  serializers.py  tasks.py  urls.py
backend/src/reports/migrations/: 0001_initial.py  0002_filedata_service_code_and_more.py  0003_analysis.py  0004_alter_analysis_options_remove_filedata_service_code_and_more.py
client/: .prettierrc  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
client/src/: index.tsx
client/src/app/: App.css  App.tsx  index.css  index.html  index.tsx
(+45 files in other folders)
